name:                snaplet-scoped-session
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/JustusAdam/snaplet-scoped-session#readme
license:             BSD3
license-file:        LICENSE
author:              JustusAdam
maintainer:          dev@justus.science
copyright:           Copyright: (c) 2016 Justus Adam
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Snap.Snaplet.Session.Scoped
                     , Snap.Snaplet.Session.Scoped.InMemory
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/JustusAdam/snaplet-scoped-session
